syntax = "proto3";

package databus;

option go_package = "databus";

message Req{
  string topic = 1;
  int64 object_id = 2;
}

message Res{
  bool result = 1;
}

message LogReq {
  string ip = 1;
  string route = 2;
  string jwt = 3;
  string req = 4;
}

service databus {
  rpc create(Req) returns(Res);
  rpc update(Req) returns(Res);
  rpc delete(Req) returns(Res);
  rpc log(LogReq) returns(Res);
}
